# dbt-ex

./: .gitingore  .user.yml  README.md  profiles.yml  pyproject.toml
database/: Dockerfile  README.md  docker-compose.yml
ex1/: dbt_project.yml
ex1/models/warehouse/: sales_order_detail.sql  sales_order_detail.yaml  sales_order_header.sql  sales_order_header.yml  source_advetrureworks.yml
ex2/: dbt_project.yml
